# advent

./: .aoc_config.template  .gitignore  CMakeLists.txt  README.md  TODO.md  advent.py  advent.pyproj  day0.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py  utils.py
.github/workflows/: lint.yaml
advent/: cli.py  data.py  plugins.py  solution.py  solver.py
advent/aoc/: client.py
advent/days/: day0.py  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
advent/solutions/y2023/: day1.py
advent/utils/: utils.py
data/y2023/1/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/2/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/3/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/4/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/5/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/6/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/7/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/8/: input.txt  part-1-answer.txt  part-2-answer.txt
data/y2023/9/: input.txt  part-1-answer.txt  part-2-answer.txt
oatmeal/: __init__.pyi  module.cpp  oatmeal.h  oatmeal.vcxproj  point.cpp  point.h  setup.py
src/advent/: annotations.py  cli.py  data.py  main.py  solution.py  solver.py  spatial.py  utils.py
src/advent/days/: day0.py  day10.py  day4.py  day8.py
src/advent/y2023/: __init__.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/donner/: annotations.py  cli.py  client.py  data.py  solution.py  solver.py
src/oatmeal/: __init__.py  __init__.pyi  grid.h  grid.tests.cpp  grid_rect_points.tests.cpp  module.cpp  oatmeal.cpp  oatmeal.h  oatmeal.vcxproj  oatmeal.vcxproj.filters  point.cpp  point.h  point.tests.cpp  vector.h  vector.tests.cpp  vector2.tests.cpp  vector3.tests.cpp
tests/: test_client.py  test_data.py  test_decorated_solution.py  test_grid.py  test_point.py  test_solution.py  test_solver.py  test_spatial.py  test_utils.py
