[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "pybind11>=2.6",
    "ninja",
    "wheel",
]

[project]
name = "scotts-advent-of-code-solutions"
requires-python = ">=3.10"
version = "0.0.1"
authors = [
  {name = "Scott MacDonald", email = "smacdo@smacdo.com"}
]

[project.scripts]
advent_cli = "advent.main:main"